k8s/ingress-camunda.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["10.12.30.88"],"port":80,"protocol":"HTTP","serviceName":"default:camunda-bpm-service","ingressName":"default:camunda-ingress","hostname":"camunda-ingress.camunda.10.12.30.88.xip.io","path":"/camunda-welcome","allNodes":false},{"addresses":["10.12.30.88"],"port":80,"protocol":"HTTP","serviceName":"default:camunda-bpm-service","ingressName":"default:camunda-ingress","hostname":"camunda-ingress.camunda.10.12.30.88.xip.io","path":"/camunda","allN [...]
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"camunda"},"name":"camunda-ingress","namespace":"default"},"spec":{"rules":[{"host":"camunda-ingress.camunda.10.12.30.88.xip.io","http":{"paths":[{"backend":{"serviceName":"camunda-bpm-service","servicePort":80},"path":"/camunda-welcome"},{"backend":{"serviceName":"camunda-bpm-service","servicePort":80},"path":"/camunda"},{"backend":{"serviceName":"camunda-bpm-service","s [...]
  creationTimestamp: "2020-08-17T20:35:44Z"
  generation: 1
  labels:
    app.kubernetes.io/instance: camunda
  name: camunda-ingress
  namespace: default
  resourceVersion: "11573530"
  selfLink: /apis/extensions/v1beta1/namespaces/default/ingresses/camunda-ingress
  uid: 24ccbed0-42f0-4b95-b1b8-3967197c6a8b
spec:
  rules:
  - host: camunda-ingress.camunda.10.12.30.88.xip.io
    http:
      paths:
      - backend:
          serviceName: camunda-bpm-service
          servicePort: 80
        path: /camunda-welcome
      - backend:
          serviceName: camunda-bpm-service
          servicePort: 80
        path: /camunda
      - backend:
          serviceName: camunda-bpm-service
          servicePort: 80
        path: /engine-rest
status:
  loadBalancer:
    ingress:
    - ip: 10.12.30.88
